--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,13 @@
 
 		<activity android:name=".activity.MainActivity"
 			android:configChanges="orientation|keyboardHidden|screenSize"
+			android:screenOrientation="portrait"
 			android:label="@string/app_name">
 		</activity>
 
 		<activity
 			android:name=".activity.GameActivity"
+			android:screenOrientation="portrait"
 			android:configChanges="orientation|keyboardHidden|screenSize">
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
