--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
 		android:theme="@style/AppTheme"
 		tools:replace="android:allowBackup">
 
-		<activity android:name=".activity.MainActivity"
+		<activity
+			android:name=".activity.MainActivity"
 			android:configChanges="orientation|keyboardHidden|screenSize"
 			android:screenOrientation="portrait"
 			android:label="@string/app_name">
